--- a/index.html
+++ b/index.html
@@ -8,26 +8,29 @@
   <!-- Icônes IT (Font Awesome) -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
+  <!-- Police plus “pro” -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;600;700&display=swap" rel="stylesheet">
+
   <style>
 :root{
-  --bg1:#050816;
-  --bg2:#0b1230;
   --card: rgba(255,255,255,.05);
   --txt: #f5f7ff;
-  --muted: rgba(255,255,255,.65);
+  --muted: rgba(255,255,255,.68);
   --accent1:#7c3aed;
   --accent2:#06b6d4;
-  --neon:#22d3ee;
+  --neon:#3ddcff;
   --border: rgba(255,255,255,.15);
 }
 
 *{box-sizing:border-box}
 html,body{height:100%}
 
-/* ✅ IMAGE NETTE + fond plein écran */
+/* ✅ IMAGE NETTE + glow discret */
 body{
   margin:0;
-  font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial;
+  font-family: "Space Grotesk", system-ui, -apple-system, Segoe UI, Roboto, Arial;
   color:var(--txt);
 
   background: url("bg-cyber.png") no-repeat center center fixed;
@@ -38,27 +41,27 @@ body{
   overflow-x:hidden;
 }
 
-/* ✅ Glow cyberpunk discret (pas de voile sombre) */
+/* Glow cyberpunk discret (n'altère pas trop la photo) */
 body::after{
   content:"";
   position:fixed;
   inset:-40px;
   pointer-events:none;
   z-index:0;
-  opacity:.22;
+  opacity:.18;
   background:
-    radial-gradient(circle at 18% 18%, rgba(124,58,237,.22), transparent 55%),
-    radial-gradient(circle at 82% 22%, rgba(6,182,212,.18), transparent 58%),
-    radial-gradient(circle at 70% 75%, rgba(34,211,238,.10), transparent 62%);
+    radial-gradient(circle at 18% 18%, rgba(124,58,237,.18), transparent 55%),
+    radial-gradient(circle at 82% 22%, rgba(6,182,212,.16), transparent 58%),
+    radial-gradient(circle at 70% 75%, rgba(61,220,255,.10), transparent 62%);
   filter: blur(18px);
   mix-blend-mode: screen;
   animation: glowPulse 4.2s ease-in-out infinite;
 }
 
 @keyframes glowPulse{
-  0%{ opacity:.16; transform:scale(1); }
-  50%{ opacity:.26; transform:scale(1.01); }
-  100%{ opacity:.18; transform:scale(1); }
+  0%{ opacity:.14; transform:scale(1); }
+  50%{ opacity:.22; transform:scale(1.01); }
+  100%{ opacity:.15; transform:scale(1); }
 }
 
 .wrap{
@@ -66,20 +69,21 @@ body::after{
   margin:0 auto;
   padding:40px 20px 80px;
   position:relative;
-  z-index:2; /* ✅ au-dessus du glow + néon */
+  z-index:2; /* au-dessus du néon */
 }
 
 .top{
   display:flex;
   justify-content:space-between;
   align-items:center;
+  gap:14px;
 }
 
 .badge{
   padding:8px 16px;
   border-radius:999px;
-  background:rgba(255,255,255,.06);
-  border:1px solid var(--border);
+  background:rgba(0,0,0,.22);
+  border:1px solid rgba(255,255,255,.16);
   font-size:13px;
   backdrop-filter: blur(10px);
 }
@@ -92,11 +96,12 @@ body::after{
 .lang-btn{
   padding:6px 14px;
   border-radius:999px;
-  border:1px solid var(--border);
+  border:1px solid rgba(255,255,255,.16);
   cursor:pointer;
   font-size:13px;
   transition:.2s;
   user-select:none;
+  background:rgba(0,0,0,.18);
   backdrop-filter: blur(10px);
 }
 
@@ -105,40 +110,54 @@ body::after{
   color:#000;
 }
 
+/* HERO plus propre (texte moins “moche”) */
+.hero{
+  margin-top:26px;
+  max-width:820px;
+  padding:22px 22px;
+  border-radius:18px;
+  background: rgba(0,0,0,.22);
+  border: 1px solid rgba(255,255,255,.14);
+  backdrop-filter: blur(10px);
+  box-shadow: 0 18px 60px rgba(0,0,0,.35);
+}
+
 h1{
-  font-size:42px;
-  margin:30px 0 10px;
-  background:linear-gradient(90deg,var(--accent1),var(--accent2));
-  -webkit-background-clip:text;
-  -webkit-text-fill-color:transparent;
-  text-shadow: 0 0 22px rgba(34,211,238,.10);
+  font-size:44px;
+  margin:0 0 10px;
+  letter-spacing:-0.8px;
+  line-height:1.05;
+  color:#f3f6ff;
+  text-shadow: 0 10px 40px rgba(0,0,0,.55);
 }
 
 .subtitle{
-  color:var(--muted);
-  max-width:700px;
-  font-size:17px;
+  margin:0;
+  color:rgba(255,255,255,.78);
+  font-size:16.5px;
+  line-height:1.6;
+  max-width:70ch;
 }
 
 .cta{
-  margin-top:25px;
+  margin-top:18px;
   display:flex;
-  gap:15px;
+  gap:12px;
   flex-wrap:wrap;
 }
 
 .btn{
   padding:12px 18px;
   border-radius:14px;
-  border:1px solid var(--border);
+  border:1px solid rgba(255,255,255,.16);
   text-decoration:none;
   color:var(--txt);
-  font-weight:600;
+  font-weight:700;
   transition:.2s;
   display:inline-flex;
   align-items:center;
   gap:8px;
-  background: rgba(0,0,0,.18);
+  background: rgba(0,0,0,.20);
   backdrop-filter: blur(10px);
 }
 
@@ -148,17 +167,16 @@ h1{
   border:none;
 }
 
-.btn:hover{
-  transform:translateY(-2px);
-}
+.btn:hover{ transform:translateY(-2px); }
 
-.section{margin-top:70px}
+.section{margin-top:60px}
 
 .section h2{
   font-size:22px;
-  margin-bottom:20px;
+  margin-bottom:18px;
   border-left:4px solid var(--accent2);
   padding-left:12px;
+  text-shadow: 0 10px 40px rgba(0,0,0,.55);
 }
 
 .grid{
@@ -171,24 +189,22 @@ h1{
   grid-column:span 6;
   padding:22px;
   border-radius:18px;
-  background:var(--card);
-  border:1px solid var(--border);
+  background:rgba(0,0,0,.22);
+  border:1px solid rgba(255,255,255,.15);
   backdrop-filter:blur(10px);
   transition:.2s;
 }
 
 .card:hover{
-  border-color:var(--neon);
+  border-color: rgba(61,220,255,.55);
   transform:translateY(-3px);
-  box-shadow:
-    0 0 0 3px rgba(34,211,238,.10),
-    0 18px 60px rgba(0,0,0,.45);
+  box-shadow: 0 0 0 3px rgba(61,220,255,.10), 0 18px 60px rgba(0,0,0,.45);
 }
 
 .card h3{
   margin:0 0 10px;
   font-size:17px;
-  color:var(--neon);
+  color: var(--neon);
   display:flex;
   align-items:center;
   gap:10px;
@@ -200,10 +216,9 @@ h1{
   opacity:.9;
 }
 
-.card p{
-  margin:0;
-  color:var(--muted);
-}
+.card p{ margin:0; color:var(--muted); line-height:1.55; }
+
+ul{ margin:0; padding-left:18px; color:var(--muted); }
 
 .footer{
   margin-top:60px;
@@ -211,76 +226,87 @@ h1{
   color:var(--muted);
 }
 
-/* ====== NEON LAPTOP OVERLAY (dessin + flicker) ====== */
-.neon-laptop{
-  position:fixed;
-  /* 👉 ajuste si besoin pour tomber pile sur le mur */
-  left: 67%;
-  top: 52%;
-  transform: translate(-50%, -50%);
-  width: min(780px, 92vw);
-  aspect-ratio: 900 / 520;
-  pointer-events:none;
-  z-index:1; /* devant le fond, derrière le contenu */
-  opacity: 0;
-  filter: drop-shadow(0 0 14px rgba(34,211,238,.45));
-  animation: neonAppear .2s ease .35s forwards;
+/* ===== NEON OUTLINE (TON CONTOUR ROUGE => BLEU) ===== */
+.neon-outline{
+  position: fixed;
+  inset: 0;
+  pointer-events: none;
+  z-index: 1; /* devant l'image, derrière le contenu */
+  opacity: 1;
 }
 
-@keyframes neonAppear{ to{ opacity:1; } }
+/* Placement sur le mur (ajuste si besoin) */
+.neon-outline-svg{
+  position: absolute;
+  width: min(980px, 92vw);
+  left: 63%;
+  top: 56%;
+  transform: translate(-50%, -50%);
+  mix-blend-mode: screen;
+}
 
-.neon-svg{ width:100%; height:100%; }
-
-.neon-line{
-  fill: transparent;
-  stroke-width: 10;
+/* Trait néon BLEU + allumage + flicker */
+.neon-stroke{
+  fill: none;
   stroke-linecap: round;
   stroke-linejoin: round;
+  stroke-width: 12;
+
+  /* 🔵 Bleu néon */
+  stroke: #3ddcff;
 
   filter:
-    drop-shadow(0 0 10px rgba(34,211,238,.55))
-    drop-shadow(0 0 24px rgba(124,58,237,.20));
+    drop-shadow(0 0 4px rgba(61,220,255,.8))
+    drop-shadow(0 0 12px rgba(61,220,255,.7))
+    drop-shadow(0 0 24px rgba(61,220,255,.6))
+    drop-shadow(0 0 40px rgba(61,220,255,.4));
 
-  stroke-dasharray: 1400;
-  stroke-dashoffset: 1400;
+  opacity: 0;
+
+  animation: neonStart 1s ease forwards,
+             neonFlicker 3s linear infinite,
+             neonPulse 4s ease-in-out infinite;
 }
 
-.neon-a{ stroke: rgba(34,211,238,.95); }
-.neon-b{ stroke: rgba(124,58,237,.90); }
-.neon-c{ stroke: rgba(34,211,238,.85); }
+/* Petites variations de timing */
+.s1{ animation-delay: .20s, 1.1s, 1.1s; }
+.s2{ animation-delay: .35s, 1.2s, 1.2s; }
+.s3{ animation-delay: .55s, 1.25s, 1.25s; stroke-width: 9; opacity:.85; }
+.s4{ animation-delay: .45s, 1.15s, 1.15s; }
+.s5{ animation-delay: .60s, 1.28s, 1.28s; stroke-width: 10; opacity:.9; }
 
-.neon-a{
-  animation: draw 0.9s ease 0.45s forwards, flicker 2.8s ease 1.35s infinite;
-}
-.neon-b{
-  animation: draw 0.8s ease 0.62s forwards, flicker 3.2s ease 1.45s infinite;
-}
-.neon-c{
-  animation: draw 0.7s ease 0.78s forwards, flicker 2.6s ease 1.55s infinite;
-}
-
-@keyframes draw{
-  to{ stroke-dashoffset: 0; }
+@keyframes neonStart{
+  0%   { opacity:0; filter: brightness(.4); }
+  40%  { opacity:.4; }
+  60%  { opacity:.2; }   /* petit faux démarrage */
+  75%  { opacity:.8; }
+  100% { opacity:1; filter: brightness(1.3); }
 }
 
-@keyframes flicker{
-  0%, 100% { opacity: 1; filter: brightness(1.15); }
-  3%  { opacity: .35; filter: brightness(.75); }
-  6%  { opacity: 1; }
-  10% { opacity: .55; filter: brightness(.85); }
-  14% { opacity: 1; }
-  22% { opacity: .78; }
-  28% { opacity: 1; }
-  72% { opacity: .92; }
+@keyframes neonFlicker{
+  0%,100% { opacity:1; }
+  5%  { opacity:.4; }
+  8%  { opacity:1; }
+  12% { opacity:.6; }
+  15% { opacity:1; }
+  50% { opacity:.95; }
+  52% { opacity:1; }
+  85% { opacity:.9; }
+}
+
+@keyframes neonPulse{
+  0%,100% { filter: brightness(1.15); }
+  50%     { filter: brightness(1.35); }
 }
 
 @media(max-width:760px){
   .card{grid-column:span 12;}
   h1{font-size:32px;}
-  .neon-laptop{
+  .hero{padding:18px;}
+  .neon-outline-svg{
     left: 50%;
-    top: 58%;
-    width: min(640px, 94vw);
+    top: 60%;
+    width: min(860px, 96vw);
   }
 }
   </style>
@@ -288,34 +314,46 @@ h1{
 
 <body>
 
-  <!-- ✅ NEON laptop qui s'allume (overlay) -->
-  <div class="neon-laptop" aria-hidden="true">
-    <svg viewBox="0 0 900 520" class="neon-svg">
-      <!-- contour laptop -->
-      <path class="neon-line neon-a"
-        d="M230 320
-           Q235 280 270 270
-           H565
-           Q605 272 610 320
-           V380
-           H230
-           Z" />
-      <!-- base -->
-      <path class="neon-line neon-b"
-        d="M190 390
-           H650
-           Q690 392 700 420
-           H140
-           Q150 392 190 390
-           Z" />
-      <!-- bouclier -->
-      <path class="neon-line neon-c"
-        d="M575 285
-           Q620 295 640 320
-           Q625 360 600 375
-           Q575 360 560 320
-           Q565 300 575 285
-           Z" />
+  <!-- ✅ NEON contour (laptop + bouclier) qui s'allume en bleu -->
+  <div class="neon-outline" aria-hidden="true">
+    <svg class="neon-outline-svg" viewBox="0 0 1000 600">
+      <!-- Contour écran -->
+      <path class="neon-stroke s1"
+        d="M120 330
+           L120 210
+           Q120 190 140 190
+           L560 190
+           Q585 190 595 210
+           L595 330" />
+
+      <!-- Base -->
+      <path class="neon-stroke s2"
+        d="M85 330
+           L635 330
+           L705 430
+           Q715 445 700 445
+           L20 445
+           Q5 445 15 430
+           L85 330" />
+
+      <!-- Ligne déco base -->
+      <path class="neon-stroke s3" d="M160 385 L560 385" />
+
+      <!-- Bouclier extérieur -->
+      <path class="neon-stroke s4"
+        d="M760 145
+           Q835 155 875 205
+           Q870 290 800 330
+           Q730 290 725 205
+           Q760 155 760 145 Z" />
+
+      <!-- Bouclier intérieur -->
+      <path class="neon-stroke s5"
+        d="M760 175
+           Q815 185 845 215
+           Q840 270 800 295
+           Q760 270 755 215
+           Q775 190 760 175 Z" />
     </svg>
   </div>
 
@@ -338,9 +376,15 @@ h1{
 
       <div class="cta">
         <a class="btn primary" href="#projets">Voir mes projets</a>
-        <a class="btn" href="https://www.linkedin.com/" target="_blank" rel="noreferrer">LinkedIn</a>
-        <a class="btn" href="https://github.com/" target="_blank" rel="noreferrer">GitHub</a>
-        <a class="btn" href="cv-leonor.pdf" download><i class="fa-solid fa-file-arrow-down"></i> Télécharger CV</a>
+        <a class="btn" href="https://www.linkedin.com/" target="_blank" rel="noreferrer">
+          <i class="fa-brands fa-linkedin"></i> LinkedIn
+        </a>
+        <a class="btn" href="https://github.com/" target="_blank" rel="noreferrer">
+          <i class="fa-brands fa-github"></i> GitHub
+        </a>
+        <a class="btn" href="cv-leonor.pdf" download>
+          <i class="fa-solid fa-file-arrow-down"></i> Télécharger CV
+        </a>
       </div>
     </div>
 
